# cportals

./: CMakeLists.txt  README.md  camera.h  main.c  main.cpp  mesh.h  model.h  vec.c
.cache/clangd/index/: _fixes.hpp.4A1A174ADB9BD8BF.idx  _vectorize.hpp.86DF8B10125469F3.idx  camera.h.89379FB9E52DCD7B.idx  common.hpp.24F4F2942C7ED91B.idx  compute_common.hpp.EACC89226B8874D5.idx  compute_vector_relational.hpp.341B2272D40EC349.idx  constants.hpp.A056585083996ACF.idx  constants.inl.61D2E19ACE82E7EB.idx  epsilon.hpp.91D5D2FAF447A956.idx  epsilon.inl.02325F548F56A4D8.idx  exponential.hpp.945B45F6431C9FE6.idx  func_common.inl.CBFAE6BF374E3623.idx  func_exponential.inl.5A74511EB58A7B91.idx  func_geometric.inl.C85DDF0F304F99E6.idx  func_integer.inl.DB3F62BAE585BBCF.idx  func_matrix.inl.7046AA80262167E4.idx  func_packing.inl.D063187903C69DF7.idx  func_trigonometric.inl.DE2FD420E5ADFC2F.idx  func_vector_relational.inl.E169E3641160D6DA.idx  fwd.hpp.D6CF85B3528D2F4F.idx  geometric.hpp.61457758C28549CF.idx  glad.c.3D182CF25C2F5CF1.idx  glad.h.8A7CF5C01614B68D.idx  glfw3.h.9D8070A2880C2B0D.idx  glm.hpp.14CF762DBE53AAF9.idx  integer.hpp.DC43DDCF7A79F4F8.idx  khrplatform.h.113B4796C2162B6D.idx  main.cpp.EFE2DF5AAE3D16FF.idx  mat2x2.hpp.DA6DBFAC4F3515AD.idx  mat2x3.hpp.71D4B46725E0D92A.idx  mat2x4.hpp.59A3E447F9EDB643.idx  mat3x2.hpp.C8DD12352B42C585.idx  mat3x3.hpp.C2956E92D7E06DB9.idx  mat3x4.hpp.AB54C1B7C2470908.idx  mat4x2.hpp.6E116FB65DABCEB2.idx  mat4x3.hpp.ABD76B4C819DF1CD.idx  mat4x4.hpp.73916F2E812461D5.idx  matrix.hpp.A277901E0AAAB119.idx  (+149 more)
shaders/: flat.vs  tri.fs  tri.vs
